hack/offline/must-gather-test-data/quay-io-maistra-istio-must-gather-sha256-6576697cc3f0d7657e7a472f5eb2058f0a4af5d56f795d277ea88eb450b8cd61/cluster-scoped-resources/admissionregistration.k8s.io/mutatingwebhookconfigurations/istio-sidecar-injector.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    meta.helm.sh/release-name: default-istiod
    meta.helm.sh/release-namespace: istio-system
  creationTimestamp: "2025-07-15T19:28:11Z"
  generation: 2
  labels:
    app: sidecar-injector
    app.kubernetes.io/instance: default-istiod
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: istiod
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 1.26.2
    helm.sh/chart: istiod-1.26.2
    istio.io/rev: default
    managed-by: sail-operator
    operator.istio.io/component: Pilot
    release: default-istiod
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:meta.helm.sh/release-name: {}
          f:meta.helm.sh/release-namespace: {}
        f:labels:
          .: {}
          f:app: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/managed-by: {}
          f:app.kubernetes.io/name: {}
          f:app.kubernetes.io/part-of: {}
          f:app.kubernetes.io/version: {}
          f:helm.sh/chart: {}
          f:istio.io/rev: {}
          f:managed-by: {}
          f:operator.istio.io/component: {}
          f:release: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"7dcc2e5a-4806-4fbb-b8c7-d8ff38160463"}: {}
      f:webhooks:
        .: {}
        k:{"name":"namespace.sidecar-injector.istio.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:reinvocationPolicy: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"object.sidecar-injector.istio.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:reinvocationPolicy: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"rev.namespace.sidecar-injector.istio.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:reinvocationPolicy: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"rev.object.sidecar-injector.istio.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:reinvocationPolicy: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: sail-operator
    operation: Update
    time: "2025-07-15T19:28:11Z"
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        k:{"name":"namespace.sidecar-injector.istio.io"}:
          f:clientConfig:
            f:caBundle: {}
        k:{"name":"object.sidecar-injector.istio.io"}:
          f:clientConfig:
            f:caBundle: {}
        k:{"name":"rev.namespace.sidecar-injector.istio.io"}:
          f:clientConfig:
            f:caBundle: {}
        k:{"name":"rev.object.sidecar-injector.istio.io"}:
          f:clientConfig:
            f:caBundle: {}
    manager: pilot-discovery
    operation: Update
    time: "2025-07-15T19:28:17Z"
  name: istio-sidecar-injector
  ownerReferences:
  - apiVersion: sailoperator.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: IstioRevision
    name: default
    uid: 7dcc2e5a-4806-4fbb-b8c7-d8ff38160463
  resourceVersion: "923"
  uid: 587e4c75-6b41-49db-ab8e-4825e89ad14c
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvVENDQWVXZ0F3SUJBZ0lSQUxqUVNYc0JsQ1ZTMXZLU1lYQzMxdkV3RFFZSktvWklodmNOQVFFTEJRQXcKR0RFV01CUUdBMVVFQ2hNTlkyeDFjM1JsY2k1c2IyTmhiREFlRncweU5UQTNNVFV4T1RJNE1UZGFGdzB6TlRBMwpNVE14T1RJNE1UZGFNQmd4RmpBVUJnTlZCQW9URFdOc2RYTjBaWEl1Ykc5allXd3dnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRERzM3N0b3h6MXNWQmFpak43c3JGMzZ5Vy94VjNPdnNOK3g1TFgKZ0VOa3JJWGRvOUNZS3JDRnNNRzJHNTJTTXdUeWZZWWhiM2hyaG8xWjZpU1ppREJieUU3MFd3aTByT3p4WlFkcgozcWsxSGhvS0JRTz [...]
    service:
      name: istiod
      namespace: istio-system
      path: /inject
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: rev.namespace.sidecar-injector.istio.io
  namespaceSelector:
    matchExpressions:
    - key: istio.io/rev
      operator: In
      values:
      - default
    - key: istio-injection
      operator: DoesNotExist
  objectSelector:
    matchExpressions:
    - key: sidecar.istio.io/inject
      operator: NotIn
      values:
      - "false"
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvVENDQWVXZ0F3SUJBZ0lSQUxqUVNYc0JsQ1ZTMXZLU1lYQzMxdkV3RFFZSktvWklodmNOQVFFTEJRQXcKR0RFV01CUUdBMVVFQ2hNTlkyeDFjM1JsY2k1c2IyTmhiREFlRncweU5UQTNNVFV4T1RJNE1UZGFGdzB6TlRBMwpNVE14T1RJNE1UZGFNQmd4RmpBVUJnTlZCQW9URFdOc2RYTjBaWEl1Ykc5allXd3dnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRERzM3N0b3h6MXNWQmFpak43c3JGMzZ5Vy94VjNPdnNOK3g1TFgKZ0VOa3JJWGRvOUNZS3JDRnNNRzJHNTJTTXdUeWZZWWhiM2hyaG8xWjZpU1ppREJieUU3MFd3aTByT3p4WlFkcgozcWsxSGhvS0JRTz [...]
    service:
      name: istiod
      namespace: istio-system
      path: /inject
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: rev.object.sidecar-injector.istio.io
  namespaceSelector:
    matchExpressions:
    - key: istio.io/rev
      operator: DoesNotExist
    - key: istio-injection
      operator: DoesNotExist
  objectSelector:
    matchExpressions:
    - key: sidecar.istio.io/inject
      operator: NotIn
      values:
      - "false"
    - key: istio.io/rev
      operator: In
      values:
      - default
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvVENDQWVXZ0F3SUJBZ0lSQUxqUVNYc0JsQ1ZTMXZLU1lYQzMxdkV3RFFZSktvWklodmNOQVFFTEJRQXcKR0RFV01CUUdBMVVFQ2hNTlkyeDFjM1JsY2k1c2IyTmhiREFlRncweU5UQTNNVFV4T1RJNE1UZGFGdzB6TlRBMwpNVE14T1RJNE1UZGFNQmd4RmpBVUJnTlZCQW9URFdOc2RYTjBaWEl1Ykc5allXd3dnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRERzM3N0b3h6MXNWQmFpak43c3JGMzZ5Vy94VjNPdnNOK3g1TFgKZ0VOa3JJWGRvOUNZS3JDRnNNRzJHNTJTTXdUeWZZWWhiM2hyaG8xWjZpU1ppREJieUU3MFd3aTByT3p4WlFkcgozcWsxSGhvS0JRTz [...]
    service:
      name: istiod
      namespace: istio-system
      path: /inject
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: namespace.sidecar-injector.istio.io
  namespaceSelector:
    matchExpressions:
    - key: istio-injection
      operator: In
      values:
      - enabled
  objectSelector:
    matchExpressions:
    - key: sidecar.istio.io/inject
      operator: NotIn
      values:
      - "false"
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvVENDQWVXZ0F3SUJBZ0lSQUxqUVNYc0JsQ1ZTMXZLU1lYQzMxdkV3RFFZSktvWklodmNOQVFFTEJRQXcKR0RFV01CUUdBMVVFQ2hNTlkyeDFjM1JsY2k1c2IyTmhiREFlRncweU5UQTNNVFV4T1RJNE1UZGFGdzB6TlRBMwpNVE14T1RJNE1UZGFNQmd4RmpBVUJnTlZCQW9URFdOc2RYTjBaWEl1Ykc5allXd3dnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRERzM3N0b3h6MXNWQmFpak43c3JGMzZ5Vy94VjNPdnNOK3g1TFgKZ0VOa3JJWGRvOUNZS3JDRnNNRzJHNTJTTXdUeWZZWWhiM2hyaG8xWjZpU1ppREJieUU3MFd3aTByT3p4WlFkcgozcWsxSGhvS0JRTz [...]
    service:
      name: istiod
      namespace: istio-system
      path: /inject
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: object.sidecar-injector.istio.io
  namespaceSelector:
    matchExpressions:
    - key: istio-injection
      operator: DoesNotExist
    - key: istio.io/rev
      operator: DoesNotExist
  objectSelector:
    matchExpressions:
    - key: sidecar.istio.io/inject
      operator: In
      values:
      - "true"
    - key: istio.io/rev
      operator: DoesNotExist
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
